# daemonserver

./: Makefile.am  Makefile.in  ProjectHome.md  WikiPageCscope.md  configure  configure.in  env-set.sh  main.cpp  tmpfile  vimrc.md
autom4te.cache/: output.0  output.2  traces.1  traces.2
branches/daemonserver/: Makefile.am  Makefile.in  configure  configure.in  env-set.sh  main.cpp
branches/daemonserver/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
branches/daemonserver/client/: Makefile.am  main.cpp
branches/daemonserver/config/: set.xml
branches/daemonserver/include/sockheader/: CSocket.h
branches/daemonserver/include/threadheader/: CInvoker.h  CLog.h
branches/daemonserver/include/tinyxmlheader/: xml_op.h
branches/daemonserver/src/communication/: CShm.cpp  CSocketClient.cpp  Makefile.am
branches/daemonserver/src/threadpool/: CCommand.cpp  CCommandJob.h  CThreadManager.cpp  CThreadManager.h  Makefile.am  Makefile.in
branches/daemonserver/src/threadpool/thread/: CThread.cpp  CThread.h  CThreadPrivate.cpp  debug.h  threadtype.h
branches/daemonserver/src/tinyxml/: Makefile.am  Makefile.in  tinyxml.cpp  tinyxmlparser.cpp  xml_op.cpp
client/: Makefile.in  main.cpp
config/: set.xml
daemonserver/: main.cpp
daemonserver/autom4te.cache/: requests  traces.2
daemonserver/client/: Makefile.am  Makefile.in
daemonserver/include/: syscom.h
daemonserver/include/threadheader/: CCommand.h
daemonserver/src/communication/: CShm.cpp  CSocketServer.cpp  Makefile.in
daemonserver/src/threadpool/: CThreadPoolWork.cpp  MyThread.h
daemonserver/src/threadpool/thread/: CMutexPrivate.cpp  CThread.h  threadtype.h
include/: operation.h  syscom.h
include/sockheader/: CShm.h  CSocketClient.h  CSocketServer.h  CTypes.h
include/threadheader/: CBuilder.h  CCommandJob.h  CJob.h  CLog.h  CThreadManager.h  tptypes.h
include/tinyxmlheader/: xml_op.h
src/communication/: CShm.cpp
src/threadpool/: CBuilder.cpp  CCommand.cpp  CCommandJob.cpp  CInvoker.cpp  CJob.cpp  CThreadManager.cpp  CThreadPool.cpp  CThreadPool.h  CThreadPoolIdle.cpp  CThreadPoolIdle.h  CThreadPoolWork.h  Makefile.am  MyThread.h  debug.h
src/threadpool/thread/: CCondPrivate.cpp  CCondPrivate.h  CMutexPrivate.h  CThread.cpp  CThread.h  CThreadPrivate.cpp  CThreadPrivate.h  debug.h  sysinclude.h
src/tinyxml/: Makefile.am  Makefile.in  debug.h  xml_op.cpp
tags/: hometree  shell.sh
trunk/daemonserver/client/: main.cpp
trunk/daemonserver/config/: set.xml
trunk/daemonserver/include/sockheader/: CShm.h  CSocketClient.h
trunk/daemonserver/include/threadheader/: CDefine.h
trunk/daemonserver/src/communication/: CSocket.cpp  CSocketClient.cpp
trunk/daemonserver/src/threadpool/: CCommandJob.cpp  CThreadManager.cpp  CThreadPool.h  Makefile.am
wiki/: WikiPageCscope.wiki  vimrc.wiki
